Work FLow Implementation

--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -17,8 +17,7 @@
         <ul class="nav navbar-nav navbar-right">
           <!-- 6 -->
           <li id="home"><a href="/login/home">HOME</a></li>
-          <li id="home"><a href="/login/home/pendingrequests">PENDING REQUEST</a></li>
-          <li id="home"><a href="/login/home/issuedbook">ISSUED BOOK</a></li>
+          <li id="home"><a href="/admin/">REQUESTS FOR BOOK</a></li>
           <li id="about"><a href="/about">ABOUT US</a></li>
           <li id="contact"><a href="/contact">CONTACT US</a></li>
           <li id="contact"><a href="/logout">LogOut</a></li>
