--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,7 +1,7 @@
 
  <%- include( "partials/header" ) -%> 
 <div class="container">
-  <form action="adduser" class="f" method="POST">
+  <form action="/register" class="f" method="POST">
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
       <input
