--- a/views/pendingrequest.ejs
+++ b/views/pendingrequest.ejs
@@ -10,12 +10,12 @@
     </tr>
   </thead>
   <tbody>
-     <% books.forEach(book =>{%>
+     <% requests.forEach(request =>{%>
     <tr>
-      <th scope="row"><%=book.id%></th>
-      <td><%=book.book_name%></td>
-      <td><%=book.author%></td>
-      <td><%=book.issue_date%></td>
+      <th scope="row"><%=request.id%></th>
+      <td><%=request.book_name%></td>
+      <td><%=request.author%></td>
+      <td><%=request.issue_date%></td>
     </tr>
      <%}) %> 
    
