--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
  <%- include( "partials/header" ) -%> 
  <h1>Welcome to Login Page</h1>
 <div class="container">
-  <form action="login" class="f" method="POST">
+  <form action="/login" class="f" method="POST">
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
       <input
