--- a/views/admin/footer.ejs
+++ b/views/admin/footer.ejs
@@ -7,5 +7,8 @@
     <center><p>Made with ❤️.@ hasnain393/GitHub && @ ❤️darshan-rts/GitHub.</p></center>
   </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script>
 </body>
 </html>
