--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -5,22 +5,18 @@
   <meta charset="utf-8">
   <title>Daily Journal</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/styles.css">
-  <!-- for linkedin-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <div class="navbar-header">
         <p class="navbar-brand">DAILY JOURNAL</p>
       </div>
         <ul class="nav navbar-nav navbar-right">
           <!-- 6 -->
-          <li id="home"><a href="/login/home">HOME</a></li>
-          <li id="home"><a href="/admin/">REQUESTS FOR BOOK</a></li>
-          <li id="about"><a href="/about">ABOUT US</a></li>
-          <li id="contact"><a href="/contact">CONTACT US</a></li>
-          <li id="contact"><a href="/logout">LogOut</a></li>
+          <li class="nav-item" id="home"><a class ="nav-link" href="/admin">HOME</a></li>
+          <li class="nav-item" id="contact"><a class ="nav-link" href="/admin/issuedbook">ISSUED BOOK</a></li>
+          <li class="nav-item" id="contact"><a class ="nav-link" href="/logout">LogOut</a></li>
         </ul>
     </div>
   </nav>
