--- a/views/issuedbook.ejs
+++ b/views/issuedbook.ejs
@@ -6,7 +6,7 @@
       <th scope="col">Id</th>
       <th scope="col">Name</th>
       <th scope="col">Author</th>
-      <th scope="col">IssueDate</th>
+      <th scope="col">Validity</th>
     </tr>
   </thead>
   <tbody>
@@ -15,7 +15,7 @@
       <th scope="row"><%=book.id%></th>
       <td><%=book.book_name%></td>
       <td><%=book.author%></td>
-      <td><%=book.issue_date%></td>
+      <td><%=book.valid_till%></td>
     </tr>
      <%}) %> 
    
