--- a/views/dialoguebox.ejs
+++ b/views/dialoguebox.ejs
@@ -7,8 +7,8 @@
           Reject
         </button>
 
-    <!-- Modal -->
-        <!-- <div
+    Modal
+      <div
           class="modal fade"
           id="exampleModalCenter"
           tabindex="-1"
@@ -56,11 +56,11 @@
                 <input type = "hidden" value="<%=request.book_name%>" name="bookname">
                 
                 </form>
-                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                <button type="button" class="btn btn-primary">Save changes</button>
               </div>
 
 
             </div>
 
           </div>
-        </div> -->
+        </div> 
